Time: 965 ms (62.35%), Space: 55.7 MB (80.69%) - LeetHub